spade-tests/src/snapshots/spade_tests__ports_integration__transitive_backward_type_can_not_be_put_in_registers.snap
---
source: spade-tests/src/ports_integration.rs
---
struct port X {
    a: ~& bool,
    b: &bool
}
entity x(clk: clock, a: X) -> bool {
    reg(clk) _ = a;
    true
}


error: The syntax for inverted ports has changed from ~ to inv
  ┌─ testinput:2:8
  │
2 │     a: ~& bool,
  │        ^ ~ cannot be used in a type
  │
  = Consider using inv
  │
2 │     a: inv & bool,
  │        ~~~~
